library/pod-security-policy/seccompv2/samples/psp-seccomp-restricted/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPSeccompV2
metadata:
  name: psp-seccomp-restricted
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    exemptImages:
    - nginx-exempt 
    allowedProfiles:
    - RuntimeDefault
    - Localhost
    allowedLocalhostFiles:
    - "*"
